--- a/scss/_clients.scss
+++ b/scss/_clients.scss
@@ -1,5 +1,5 @@
 .clients-section {
-    padding: 4rem 0;
+    padding: 2rem 0;
     background-color: #f9f9f9;
     overflow: hidden;
 
