--- a/scss/_gallery_new.scss
+++ b/scss/_gallery_new.scss
@@ -1,5 +1,5 @@
 .gallery-section {
-    padding: $spacing-lg 0;
+    padding: $spacing-md 0;
     background-color: $background-color;
     overflow: hidden;
     
