--- a/scss/_process.scss
+++ b/scss/_process.scss
@@ -1,7 +1,7 @@
 .process-section {
     @include container;
     text-align: center;
-    padding: $spacing-lg 0;
+    padding: $spacing-md 0;
     
     .process-grid {
         display: grid;
